--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -12,7 +12,7 @@ services:
       - data:/surrealdb
 
   llm-db:
-    image: surrealdb/surrealdb:latest
+    image: surrealdb/surrealdb:latest-dev
     container_name: llm-db
     command: start --log info --user root --pass root file:/surrealdb/llm.db
     networks:
@@ -30,7 +30,7 @@ services:
         condition: service_completed_successfully
 
   db:
-    image: surrealdb/surrealdb:latest
+    image: surrealdb/surrealdb:latest-dev
     container_name: db
     command: start --log info --user root --pass root file:/surrealdb/surreal.db
     ports:
