--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -20,7 +20,7 @@ services:
     volumes:
       - llm-data:/surrealdb
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:8000/health"]
+      test: [ "CMD", "wget", "-q", "--spider", "--tries=1", "http://localhost:8000/health" ]
       interval: 30s
       timeout: 10s
       retries: 5
@@ -40,7 +40,7 @@ services:
     volumes:
       - data:/surrealdb
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:8000/health"]
+      test: [ "CMD", "wget", "-q", "--spider", "--tries=1", "http://localhost:8000/health" ]
       interval: 30s
       timeout: 10s
       retries: 5
