--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,9 @@
 [submodule "frontend"]
 	path = frontend
 	url = git@github.com:DV1512/frontend.git
-[submodule "python_backend"]
-	path = python_backend
-	url = git@github.com:DV1512/python_backend.git
 [submodule "backend"]
 	path = backend
 	url = git@github.com:DV1512/backend.git
+[submodule "llm_backend"]
+	path = llm_backend
+	url = git@github.com:DV1512/llm_backend
