Updated the project to now use the latest version of the project

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -65,6 +65,9 @@ services:
       SURREALDB_URL: db:8000
       GOOGLE_CLIENT_ID: ${GOOGLE_CLIENT_ID}
       GOOGLE_CLIENT_SECRET: ${GOOGLE_CLIENT_SECRET}
+      GITHUB_CLIENT_ID: ${GITHUB_CLIENT_ID}
+      GITHUB_CLIENT_SECRET: ${GITHUB_CLIENT_SECRET}
+      RUST_LOG: info
       PORT: 9999
     ports:
       - "9999:9999"
